<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loader_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_picture"
        android:background="@drawable/round_background"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_input_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        app:layout_constraintBottom_toTopOf="@+id/profession_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_shape" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profession_input_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/profession"
        app:layout_constraintBottom_toTopOf="@+id/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profession"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/input_text_shape" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_button_shape"
        android:backgroundTint="@color/white"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@+id/sign_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession_input_layout" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_button_shape"
        android:backgroundTint="@color/white"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />
</androidx.constraintlayout.widget.ConstraintLayout>